<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/main_content">

            <TextView
                android:id="@+id/today"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/_today"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/light_grey"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/_portfolio"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:text="@string/_networth"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:text="@string/_cashbalance"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textSize="19sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:text="@string/_default_balance"
                    android:id="@+id/worth"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textSize="19sp"/>

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:text="@string/_default_balance"
                    android:textStyle="bold"
                    android:id="@+id/balance"
                    android:gravity="center_vertical"
                    android:textSize="19sp"/>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_portfolio"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/light_grey"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/_favorite"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_fav"/>

            <TextView
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_source"
                android:textColorLink="@color/grey"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/autocomplete"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:elevation="7dp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/purple_500" />
    </RelativeLayout>

</LinearLayout>